# AiModels

./: .gitignore  README.md  pyproject.toml
01_transformer/: .gitignore  README.md
01_transformer/checkpoint/: config.json
01_transformer/data/ch-eng/: tokenizer.model
01_transformer/scripts/: eval.sh  train.sh
01_transformer/transformer_src/config/: __init__.py  config.py
01_transformer/transformer_src/datasets/: ch_eng_dataset.py
01_transformer/transformer_src/eval/: predict.py
01_transformer/transformer_src/model/: __init__.py  decoder.py  encoder.py  transformer.py
01_transformer/transformer_src/model/model_components/: add_norm.py  attentions.py  embedding_layer.py  positional_encoding.py
01_transformer/transformer_src/train/: train.py
transformer/: .gitignore  README.md  setup.py
transformer/data/ch-eng/: tokenizer.vocab
transformer/transformer_src/datasets/: __init__.py
transformer/transformer_src/eval/: metrics.py  predict.py
transformer/transformer_src/model/: encoder.py  transformer.py
transformer/transformer_src/model/model_components/: __init__.py  attentions.py  ffn.py
transformer/transformer_src/tokenizer/: tokenizer.py
transformer/transformer_src/train/: train.py
